--- a/templates/_checkout.html
+++ b/templates/_checkout.html
@@ -15,7 +15,7 @@
 						
 						<div>
 							<div class="red-head">
-								<span>Billing Information</span>
+								<span>Billing Information &nbsp| &nbsp  <a href="#/checkout/Step1">Change</a></span>
 							 </div>
 							 
 							 <section>
@@ -29,15 +29,25 @@
 							 </section>
 							 
 							 <div class="red-head">
-								<span>Payment Method</span>
+								<span>Payment Method &nbsp| &nbsp  <a href="#/checkout/Step2">Change</a></span>
 							 </div>
 							 
 							 <section>
 							 	<p class="full-description">
-							 		<span>Alex Tuner</span><br>
-							 		<span></span><br>
-							 		<span>Sheffield, 35660</span><br>
-							 		<span>T:0520000000</span><br>
+							 		<span class="bold" ng-show="checkout.pay_method == 'credit_card'">Credit Card (saved) <br></span>
+							 		
+							 		<span class="bold" ng-show="checkout.pay_method == 'money_order'">Check / Money order <br></span>
+							 		
+							 		<span ng-show="checkout.pay_method == 'credit_card'" class="full-description">
+								 		<span class="bold" ng-show="checkout.CC_type.length">Credit Card Type: <br></span>
+								 		<span>{{checkout.CC_type}}</span><br ng-show="checkout.CC_type.length">
+								 		
+								 		<span class="bold" ng-show="checkout.CC_number.length">Credit Card Number: <br></span>
+								 		<span ng-show="checkout.CC_number.length">xxxx-{{checkout.CC_number | limitTo : 4 : -4 }}<br></span>
+								 		
+								 		<span class="bold" ng-show="checkout.card_name.length">Name on the Card:</span><br>
+								 		<span>{{checkout.card_name }}</span>
+								 	</span>
 							 	</p>
 							 </section>
 						</div>
@@ -115,7 +125,7 @@
 								<p>
 									<span class="required">* Required Fields</span>
 									
-									<button ng-disabled="step1.$invalid" ng-click="goTo('#/checkout/Step2')">Continue</button>
+									<button ng-disabled="step1.$invalid" ng-click="saveCheckoutInfo( checkout , '1' ); goTo('#/checkout/Step2')">Continue</button>
 								</p>
 								
 							</form>
@@ -162,10 +172,10 @@
 										<br>
 										<select name="CC_type" id="CC_type" ng-model="checkout.CC_type"  required>
 											<option value="" ng-selected="true">Select a card</option>
-											<option value="visa">Visa</option>
-											<option value="masterCard">Master Card</option>
-											<option value="american_express">American Express</option>
-											<option vlaue="diners">Diners </option>
+											<option value="Visa">Visa</option>
+											<option value="MasterCard">Master Card</option>
+											<option value="American_express">American Express</option>
+											<option vlaue="Diners">Diners </option>
 										</select>
 										<span ng-show="step2.CC_type.$invalid && step2.CC_type.$touched" class="required">
 											<span ng-show="step2.CC_type.$error.required">This is a required field</span>
@@ -234,7 +244,7 @@
 								
 								</div>
 								
-								<button ng-disabled="step2.$invalid" ng-click="goTo('#/checkout/Step3')">Continue</button>
+								<button ng-disabled="step2.$invalid" ng-click="saveCheckoutInfo( checkout , '2' ); goTo('#/checkout/Step3')">Continue</button>
 								
 							</form>
 								
