:jack_o_lantern: local session

--- a/style/main.css
+++ b/style/main.css
@@ -58,6 +58,7 @@ header .centerd nav ul li, #breadcrumb ul li{
 	display:inline-block;
 	list-style-type: none;
 	padding: 0px 20px 0 0;
+	cursor:pointer;
 }
 
 a {
