--- a/style/main.css
+++ b/style/main.css
@@ -342,6 +342,7 @@ section#content figcaption{
 
 #breadcrumb li.located{
 	color:#A4A4A4;
+	cursor:default !important;
 }
 
 #breadcrumb li.located::after{
@@ -374,6 +375,7 @@ section#content figcaption{
 	height:20px;
 	width:20px;
 	filter: brightness(50%);
+	cursor:pointer;
 	-webkit-filter: brightness(150%);
 	-moz-filter: brightness(50%);
 	-o-filter: brightness(50%);
@@ -983,6 +985,7 @@ i#heart{
 .w-line{
 	font-size:12px;
 	font-weight:bold;
+	cursor:pointer;
 }
 
 
