--- a/templates/_category.html
+++ b/templates/_category.html
@@ -2,7 +2,7 @@
 			<div id="breadcrumb" class="centerd">
 				<ul class="inline-list">
 					<li><a href="index.html">Home</a></li>
-					<li class="located">Category</li>
+					<li class="located">{{current_genre}}</li>
 				</ul>
 			</div>
 			
